--- a/index.html
+++ b/index.html
@@ -394,6 +394,25 @@
 	</script>
 	<!-- P179 ***************************************************************-->
 
+
+	<!-- P182 ***************************************************************-->
+	<script type="text/javascript">
+	/*********************************/
+	//P182
+	//about cookie
+	/*********************************/
+	//write
+	document.cookie = "name = adang; expires = Mon, 30 Nov 2009 05:49:47 GMT; path = /";
+	document.cookie = "sex = male; expires = Mon, 30 Nov 2009 05:49:47 GMT; path = /";
+	document.cookie = "blog = http://www.adanghome.com; expires = Mon, 30 Nov 2009 05:49:47 GMT; path=/";
+	//read
+	var cookieStr = document.cookie;
+	alert(cookieStr)
+	// var name = cookieStr.split("name")[1].split(";")[0].split("=")[1];
+	// alert(name);
+	</script>
+	<!-- P182 ***************************************************************-->
+
 	/*********************************/
 </body>
 </html>
