--- a/P229.html
+++ b/P229.html
@@ -176,7 +176,7 @@
 
 
 	// myCat.prototype.sayThing = function(){
-	// 	alert(this.getType());
+	// 	alert(this.getType());	//undefined 实例化之后
 	// };
 	// myCat.sayThing();	//sayThing() is undefined;
 
@@ -189,114 +189,174 @@
 	/********************************/
 	//P234
 	/********************************/
-	function Animal(name){
-		var name = name;
-		var type = "animal";
-		var _age = 20;
-		//添加master属性, 默认值为adang
-		var master = "adang";
-		this.getName = function(){
-			return name;
-		};
-		this.setName = function(o){
-			if(o != "wangcai" && o != "xiaoqiang"){
-				alert("您设置的name值不合要求");
-				return;
-			};
-			name = o;
-			//触发name属性的valueChange事件
-			this._valueChangeHandler("name");
-		};
-		//master属性的获取方法
-		this.getMaster = function(){
-			return master;
-		};
-		//master属性的设置方法
-		this.setMaster = function(o){
-			master = o;
-			//触发master属性的valueChange事件;
-			this._valueChangeHandler("master");
-		};
-		this.getType = function(){
-			return type;
-		};
-		this.setType = function(o){
-			alert("赋值失败，Animal类的type属性是只读属性");
-		};
-		this._getAge = function(){
-			return _age;
-		};
-		this._setAge = function(){
-			_age = o;
-		}
-	};
-	Animal.prototype = {
-		_move : function(){
-			alert("I'm moving now !");
-		},
-		say : function(){
-			alert("I'm a " + this.getType() + ", my name is " + this.getName() + ", I'm " + this._getAge());
-		},
-		act : function(){
-			this._move();
-		},
-		//公有行为，用于注册属性的valueChange事件
-		onChange : function(valueName, fun){
-			this["_"+valueName+"ChangeHandlers"] = this["_"+valueName+"ChangeHandlers"] || [];
-			this["_"+valueName+"ChangeHandlers"].push(fun);
-		},
-		//私有行为，属性valueChange的处理函数
-		_valueChangeHandler : function(valueName){
-			var o = this["_"+valueName+"ChangeHandlers"];
-			if(o){
-				for(var i = 0, n = o.length; i < n; i++){
-					var methodName = "get"+valueName.charAt(0).toUpperCase()+valueName.slice(1);
-					//what is this ?
-					// console.log(o[i]);
-					o[i](this[methodName]());
-				}
-			}
-		}
-	};
+	// function Animal(name){
+	// 	var name = name;
+	// 	var type = "animal";
+	// 	var _age = 20;
+	// 	//添加master属性, 默认值为adang
+	// 	var master = "adang";
+	// 	this.getName = function(){
+	// 		return name;
+	// 	};
+	// 	this.setName = function(o){
+	// 		if(o != "wangcai" && o != "xiaoqiang"){
+	// 			alert("您设置的name值不合要求");
+	// 			return;
+	// 		};
+	// 		name = o;
+	// 		//触发name属性的valueChange事件
+	// 		this._valueChangeHandler("name");
+	// 	};
+	// 	//master属性的获取方法
+	// 	this.getMaster = function(){
+	// 		return master;
+	// 	};
+	// 	//master属性的设置方法
+	// 	this.setMaster = function(o){
+	// 		master = o;
+	// 		//触发master属性的valueChange事件;
+	// 		this._valueChangeHandler("master");
+	// 	};
+	// 	this.getType = function(){
+	// 		return type;
+	// 	};
+	// 	this.setType = function(o){
+	// 		alert("赋值失败，Animal类的type属性是只读属性");
+	// 	};
+	// 	this._getAge = function(){
+	// 		return _age;
+	// 	};
+	// 	this._setAge = function(){
+	// 		_age = o;
+	// 	}
+	// };
+	// Animal.prototype = {
+	// 	_move : function(){
+	// 		alert("I'm moving now !");
+	// 	},
+	// 	say : function(){
+	// 		alert("I'm a " + this.getType() + ", my name is " + this.getName() + ", I'm " + this._getAge());
+	// 	},
+	// 	act : function(){
+	// 		this._move();
+	// 	},
+	// 	//公有行为，用于注册属性的valueChange事件
+	// 	onChange : function(valueName, fun){
+	// 		this["_"+valueName+"ChangeHandlers"] = this["_"+valueName+"ChangeHandlers"] || [];
+	// 		this["_"+valueName+"ChangeHandlers"].push(fun);
+	// 	},
+	// 	//私有行为，属性valueChange的处理函数
+	// 	_valueChangeHandler : function(valueName){
+	// 		var o = this["_"+valueName+"ChangeHandlers"];
+	// 		if(o){
+	// 			for(var i = 0, n = o.length; i < n; i++){
+	// 				var methodName = "get"+valueName.charAt(0).toUpperCase()+valueName.slice(1);
+	// 				//what is this ?
+	// 				// console.log(o[i]);
+	// 				o[i](this[methodName]());
+	// 			}
+	// 		}
+	// 	}
+	// };
 
-	var myDog = new Animal("wangcai");
-	//给myDog注册name属性的valueChange事件
-	myDog.onChange("name",function(o){
-		//回调函数接受新的value值作为参数，可以对其进行匹配
-		if(o == "xiaoqiang"){
-			alert(1);
-		}else{
-			alert(2);
-		}
-	});
-	//给myDog换个新名字xiaoqiang;
-	myDog.setName("xiaoqiang");
-	//给myDog再注册一个name属性的valueChange事件
-	myDog.onChange("name",function(o){
-		alert("my new name is "+ o);
-	});
-	//给myDog换个新名字“wangcai”
-	myDog.setName("wangcai");
-	//给myDog注册master属性的valueChange事件
-	myDog.onChange("master",function(o){
-		alert("my new master is " + o);
-	});
-	//给myDog换个master
-	myDog.setMaster("licai");
+	// var myDog = new Animal("wangcai");
+	// //给myDog注册name属性的valueChange事件
+	// myDog.onChange("name",function(o){
+	// 	//回调函数接受新的value值作为参数，可以对其进行匹配
+	// 	if(o == "xiaoqiang"){
+	// 		alert(1);
+	// 	}else{
+	// 		alert(2);
+	// 	}
+	// });
+	// //给myDog换个新名字xiaoqiang;
+	// myDog.setName("xiaoqiang");
+	// //给myDog再注册一个name属性的valueChange事件
+	// myDog.onChange("name",function(o){
+	// 	alert("my new name is "+ o);
+	// });
+	// //给myDog换个新名字“wangcai”
+	// myDog.setName("wangcai");
+	// //给myDog注册master属性的valueChange事件
+	// myDog.onChange("master",function(o){
+	// 	alert("my new master is " + o);
+	// });
+	// //给myDog换个master
+	// myDog.setMaster("licai");
 
-	var myDog2 = new Animal("xiaoqiang");
-	//给myDog2注册master属性的valueChange事件
-	myDog2.onChange("master",function(o){
-		alert(o + "is my new master");
-	});
-	myDog2.setMaster("zhou yubo");
-
-
+	// var myDog2 = new Animal("xiaoqiang");
+	// //给myDog2注册master属性的valueChange事件
+	// myDog2.onChange("master",function(o){
+	// 	alert(o + "is my new master");
+	// });
+	// myDog2.setMaster("zhou yubo");
 
 
+	/********************************/
+	//P236 extend
+	/********************************/
+	// function Animal(name){
+	// 	this.name = name;
+	// 	this.type = "animal";
+	// };
+	// Animal.prototype = {
+	// 	say : function(){
+	// 		alert("I'm a" + this.type + ", my name is " + this.name);
+	// 	},
+	// 	fly : function(){
+	// 		alert(56743);
+	// 	}
+	// };
+
+	// function Bird(name){
+	// 	Animal.call(this,name);
+	// };
+	// Bird.prototype = Animal.prototype;
+	// Bird.prototype.fly = function(){
+	// 	alert("I'm flying !");
+	// };
+	// var myBird = new Bird("xiaocui");
+	// myBird.say();	//I'm a animal, my name is xiaocui
+	// myBird.fly();	//I'm flying
+	// var myDog = new Animal("wangcai");
+	// console.log(myDog.name);
+	// myDog.constructor.prototype.fly = function(){
+	// 	alert(12);
+	// }
+	// var myDog2 = new Animal("wangcaiAAAA");
+	// console.log(myDog2.name);
+	// myDog2.fly();
+	// myDog.fly();	//I'm flying
 
 
+	// //关于传值与传址
+	// var a = [1,2,3], b = {name:"adang", sex: "male", age: 30};
+	// var c = [], d = {};
+	// for(var p in a){
+	// 	c[p] = a[p];
+	// };
+	// for(var p in b){
+	// 	d[p] = b[p]
+	// };
+	// c.push("4");
+	// alert(a);
+	// alert(c);
+	// b.mail = "contact@mail.com";
+	// alert(b.mail);
+	// alert(d.mail);
 
+	// //数组传值的简单方法
+	// var e = [1, 2, 3];
+	// var f = e.slice(), g = e.concat();
+	// f.pop();
+	// g.push(4);
+	// alert(e);
+	// alert(f);
+	// alert(g);
+
+
+	//改进原型继承
+	//
 
 	/********************************/
 	</script>
