--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 		}
 	};
 	function Bird(name){
-		this.constructor.superclass.constructor.apply(this.arguments);
+		this.constructor.superClass.constructor.apply(this.arguments);
 		this.type = "bird";
 	}
 	extend(Bird, Animal);
